--- a/en/index.html
+++ b/en/index.html
@@ -21,9 +21,8 @@
 
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-
     <!-- Main CSS -->
-    <link rel="stylesheet" href="../assets/css/style.css?v=20251024">
+    <link rel="stylesheet" href="../assets/css/style.css">
 
     <!-- AOS Animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -43,9 +42,8 @@
                         style="background-image: url('https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?w=1920&q=80')">
                         <div class="hero-overlay"></div>
                         <div class="hero-content">
-                            <h2 class="hero-title" data-aos="fade-up">Flavors Deepen with Time</h2>
-                            <p class="hero-subtitle" data-aos="fade-up">Discover the New Appeal of
-                                Aged Sake</p>
+                            <h2 class="hero-title" data-aos="fade-up">Depth Refined by Time</h2>
+                            <p class="hero-subtitle" data-aos="fade-up">Discover the New Appeal of Aged Sake</p>
                         </div>
                     </div>
                 </div>
@@ -54,9 +52,8 @@
                         style="background-image: url('https://images.unsplash.com/photo-1545569341-9eb8b30979d9?w=1920&q=80')">
                         <div class="hero-overlay"></div>
                         <div class="hero-content">
-                            <h2 class="hero-title" data-aos="fade-up">Tradition Meets Innovation</h2>
-                            <p class="hero-subtitle" data-aos="fade-up">Creating New Sake Culture
-                            </p>
+                            <h2 class="hero-title" data-aos="fade-up">Tradition and Innovation</h2>
+                            <p class="hero-subtitle" data-aos="fade-up">Creating a New Sake Culture</p>
                         </div>
                     </div>
                 </div>
@@ -66,8 +63,7 @@
                         <div class="hero-overlay"></div>
                         <div class="hero-content">
                             <h2 class="hero-title" data-aos="fade-up">Excellence Through Aging</h2>
-                            <p class="hero-subtitle" data-aos="fade-up">Welcome to the World of
-                                Aged Sake</p>
+                            <p class="hero-subtitle" data-aos="fade-up">Welcome to the World of Aged Sake</p>
                         </div>
                     </div>
                 </div>
@@ -188,9 +184,6 @@
                     </div>
                 </div>
             </div>
-            </article>
-            </div>
-            </div>
         </section>
 
         <!-- About Society Section -->
@@ -261,6 +254,10 @@
                                 interaction,
                                 we share knowledge and techniques to develop aged sake culture.
                             </p>
+                            <div class="activity-thumbs">
+                                <img src="../assets/images/tom-crew-NLcLjLNUJbY-unsplash.jpg" alt="Tasting event scene">
+                                <img src="../assets/images/zaji-kanamajina-TF0XZqGJNLw-unsplash.jpg" alt="Sake barrels">
+                            </div>
                             <a href="#contact" class="btn btn-outline">Membership Information</a>
                         </div>
                     </div>
@@ -277,61 +274,61 @@
                 </div>
 
                 <div class="news-list">
-                    <article class="news-item">
+                    <a class="news-item" href="../news/001.html">
                         <time class="news-item-date">2025.10.15</time>
                         <span class="news-item-category">Event</span>
                         <h3 class="news-item-title">Aged Sake Tasting Event Announcement</h3>
-                        <a href="#news-detail-1" class="news-item-link" aria-label="Read more">
+                        <span class="news-item-arrow" aria-hidden="true">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                                 <polyline points="12 5 19 12 12 19"></polyline>
                             </svg>
-                        </a>
-                    </article>
+                        </span>
+                    </a>
 
-                    <article class="news-item">
+                    <a class="news-item" href="../news/002.html">
                         <time class="news-item-date">2025.09.28</time>
                         <span class="news-item-category">Notice</span>
                         <h3 class="news-item-title">New Member Recruitment</h3>
-                        <a href="#news-detail-2" class="news-item-link" aria-label="Read more">
+                        <span class="news-item-arrow" aria-hidden="true">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                                 <polyline points="12 5 19 12 12 19"></polyline>
                             </svg>
-                        </a>
-                    </article>
+                        </span>
+                    </a>
 
-                    <article class="news-item">
+                    <a class="news-item" href="../news/index.html">
                         <time class="news-item-date">2025.09.10</time>
                         <span class="news-item-category">Media</span>
                         <h3 class="news-item-title">100-Year Project Featured in Media</h3>
-                        <a href="#news-detail-3" class="news-item-link" aria-label="Read more">
+                        <span class="news-item-arrow" aria-hidden="true">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                                 <polyline points="12 5 19 12 12 19"></polyline>
                             </svg>
-                        </a>
-                    </article>
+                        </span>
+                    </a>
 
-                    <article class="news-item">
+                    <a class="news-item" href="../news/index.html">
                         <time class="news-item-date">2025.08.22</time>
                         <span class="news-item-category">Event</span>
                         <h3 class="news-item-title">Aged Sake Seminar Report</h3>
-                        <a href="#news-detail-4" class="news-item-link" aria-label="Read more">
+                        <span class="news-item-arrow" aria-hidden="true">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                                 <polyline points="12 5 19 12 12 19"></polyline>
                             </svg>
-                        </a>
-                    </article>
+                        </span>
+                    </a>
                 </div>
 
                 <div class="section-cta">
-                    <a href="#news-archive" class="btn btn-outline">View All News</a>
+                    <a href="../news/index.html" class="btn btn-outline">View All News</a>
                 </div>
             </div>
         </section>
@@ -348,7 +345,7 @@
                             We aim to create the ultimate aged sake that transcends time. This project serves as
                             an initiative to preserve sake culture and build a bridge to the future.
                         </p>
-                        <a href="#project-detail" class="btn btn-primary">Learn More</a>
+                        <a href="../project/index.html" class="btn btn-primary">Learn More</a>
                     </div>
                     <div class="project-image">
                         <img src="https://images.unsplash.com/photo-1559056199-641a0ac8b55e?w=800&q=80"
@@ -397,7 +394,7 @@
                                             Enjoy carefully selected aged sake paired with seasonal cuisine in an
                                             elegant atmosphere.
                                         </p>
-                                        <a href="#shop-detail-1" class="shop-link">Learn More →</a>
+                                        <a href="../shops/tokyo-ginza.html" class="shop-link">Learn More →</a>
                                     </div>
                                 </div>
                             </div>
@@ -424,7 +421,7 @@
                                             Rare aged sake collection from breweries nationwide. Expert staff available
                                             for guidance.
                                         </p>
-                                        <a href="#shop-detail-2" class="shop-link">Learn More →</a>
+                                        <a href="../shops/_detail-template.html-2" class="shop-link">Learn More →</a>
                                     </div>
                                 </div>
                             </div>
@@ -451,7 +448,7 @@
                                             Experience aged sake and authentic Japanese cuisine in a traditional Kyoto
                                             setting.
                                         </p>
-                                        <a href="#shop-detail-3" class="shop-link">Learn More →</a>
+                                        <a href="../shops/_detail-template.html-3" class="shop-link">Learn More →</a>
                                     </div>
                                 </div>
                             </div>
@@ -477,7 +474,7 @@
                                         <p class="shop-description">
                                             Casual atmosphere offering a diverse selection of aged sake to enjoy.
                                         </p>
-                                        <a href="#shop-detail-4" class="shop-link">Learn More →</a>
+                                        <a href="../shops/_detail-template.html-4" class="shop-link">Learn More →</a>
                                     </div>
                                 </div>
                             </div>
@@ -503,7 +500,7 @@
                                         <p class="shop-description">
                                             Curated selection featuring local breweries and carefully chosen aged sake.
                                         </p>
-                                        <a href="#shop-detail-5" class="shop-link">Learn More →</a>
+                                        <a href="../shops/_detail-template.html-5" class="shop-link">Learn More →</a>
                                     </div>
                                 </div>
                             </div>
@@ -519,7 +516,7 @@
                 </div>
 
                 <div class="section-cta">
-                    <a href="#shops-list" class="btn btn-outline">View All Locations</a>
+                    <a href="../shops/index.html" class="btn btn-outline">View All Locations</a>
                 </div>
             </div>
         </section>
@@ -550,7 +547,7 @@
                                             Whether chilled,
                                             at room temperature, or warmed, each temperature brings unique flavors.
                                         </p>
-                                        <a href="#blog-detail-1" class="blog-link">Read More</a>
+                                        <a href="../blog/article01.html" class="blog-link">Read More</a>
                                     </div>
                                 </article>
                             </div>
@@ -568,7 +565,7 @@
                                             The profound flavors of aged sake pair wonderfully with various cuisines.
                                             Discover harmonious combinations with Japanese, Western, and ethnic dishes.
                                         </p>
-                                        <a href="#blog-detail-2" class="blog-link">Read More</a>
+                                        <a href="../blog/index.html" class="blog-link">Read More</a>
                                     </div>
                                 </article>
                             </div>
@@ -586,7 +583,7 @@
                                             Learn proper storage methods to enjoy your aged sake in optimal condition.
                                             With proper care, you can even continue the aging process.
                                         </p>
-                                        <a href="#blog-detail-3" class="blog-link">Read More</a>
+                                        <a href="../blog/index.html" class="blog-link">Read More</a>
                                     </div>
                                 </article>
                             </div>
@@ -602,7 +599,7 @@
                 </div>
 
                 <div class="section-cta">
-                    <a href="#blog-archive" class="btn btn-outline">View All Articles</a>
+                    <a href="../blog/index.html" class="btn btn-outline">View All Articles</a>
                 </div>
             </div>
         </section>
@@ -701,7 +698,7 @@
                         <div class="form-group">
                             <label class="checkbox-label">
                                 <input type="checkbox" name="privacy" required>
-                                <span>I agree to the <a href="privacy.html" target="_blank">Privacy Policy</a></span>
+                                <span>I agree to the <a href="../privacy.html" target="_blank">Privacy Policy</a></span>
                             </label>
                         </div>
 
