--- a/fr/index.html
+++ b/fr/index.html
@@ -236,6 +236,12 @@
                                 brasseries, des institutions de recherche, des distributeurs et des restaurants à
                                 travers le Japon.
                             </p>
+                            <div class="activity-thumbs">
+                                <img src="../assets/images/tom-crew-NLcLjLNUJbY-unsplash.jpg"
+                                    alt="Scène de dégustation">
+                                <img src="../assets/images/zaji-kanamajina-TF0XZqGJNLw-unsplash.jpg"
+                                    alt="Tonneaux de saké">
+                            </div>
                             <a href="#contact" class="btn btn-outline">Informations sur l'adhésion</a>
                         </div>
                     </div>
@@ -252,61 +258,61 @@
                 </div>
 
                 <div class="news-list">
-                    <article class="news-item">
+                    <a class="news-item" href="../news/001.html">
                         <time class="news-item-date">2025.10.15</time>
                         <span class="news-item-category">Événement</span>
                         <h3 class="news-item-title">Annonce d'Événement de Dégustation</h3>
-                        <a href="#news-detail-1" class="news-item-link" aria-label="Lire la suite">
+                        <span class="news-item-arrow" aria-hidden="true">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                                 <polyline points="12 5 19 12 12 19"></polyline>
                             </svg>
-                        </a>
-                    </article>
+                        </span>
+                    </a>
 
-                    <article class="news-item">
+                    <a class="news-item" href="../news/002.html">
                         <time class="news-item-date">2025.09.28</time>
                         <span class="news-item-category">Avis</span>
                         <h3 class="news-item-title">Recrutement de Nouveaux Membres</h3>
-                        <a href="#news-detail-2" class="news-item-link" aria-label="Lire la suite">
+                        <span class="news-item-arrow" aria-hidden="true">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                                 <polyline points="12 5 19 12 12 19"></polyline>
                             </svg>
-                        </a>
-                    </article>
+                        </span>
+                    </a>
 
-                    <article class="news-item">
+                    <a class="news-item" href="../news/index.html">
                         <time class="news-item-date">2025.09.10</time>
                         <span class="news-item-category">Médias</span>
                         <h3 class="news-item-title">Projet 100 Ans dans les Médias</h3>
-                        <a href="#news-detail-3" class="news-item-link" aria-label="Lire la suite">
+                        <span class="news-item-arrow" aria-hidden="true">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                                 <polyline points="12 5 19 12 12 19"></polyline>
                             </svg>
-                        </a>
-                    </article>
+                        </span>
+                    </a>
 
-                    <article class="news-item">
+                    <a class="news-item" href="../news/index.html">
                         <time class="news-item-date">2025.08.22</time>
                         <span class="news-item-category">Événement</span>
                         <h3 class="news-item-title">Rapport du Séminaire sur le Saké maturé</h3>
-                        <a href="#news-detail-4" class="news-item-link" aria-label="Lire la suite">
+                        <span class="news-item-arrow" aria-hidden="true">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <line x1="5" y1="12" x2="19" y2="12"></line>
                                 <polyline points="12 5 19 12 12 19"></polyline>
                             </svg>
-                        </a>
-                    </article>
+                        </span>
+                    </a>
                 </div>
 
                 <div class="section-cta">
-                    <a href="#news-archive" class="btn btn-outline">Voir Toutes les Actualités</a>
+                    <a href="../news/index.html" class="btn btn-outline">Voir Toutes les Actualités</a>
                 </div>
             </div>
         </section>
@@ -325,7 +331,7 @@
                             d'initiative
                             pour préserver la culture du saké et construire un pont vers l'avenir.
                         </p>
-                        <a href="#project-detail" class="btn btn-primary">En Savoir Plus</a>
+                        <a href="../project/index.html" class="btn btn-primary">En Savoir Plus</a>
                     </div>
                     <div class="project-image">
                         <img src="https://images.unsplash.com/photo-1559056199-641a0ac8b55e?w=800&q=80"
@@ -374,7 +380,7 @@
                                             Dégustez du saké maturé soigneusement sélectionné associé à une cuisine de
                                             saison dans une atmosphère élégante.
                                         </p>
-                                        <a href="#shop-detail-1" class="shop-link">En Savoir Plus →</a>
+                                        <a href="../shops/tokyo-ginza.html" class="shop-link">En Savoir Plus →</a>
                                     </div>
                                 </div>
                             </div>
@@ -401,7 +407,7 @@
                                             Collection de sakés maturés rares provenant de brasseries nationales.
                                             Personnel expert disponible pour vous guider.
                                         </p>
-                                        <a href="#shop-detail-2" class="shop-link">En Savoir Plus →</a>
+                                        <a href="../shops/_detail-template.html" class="shop-link">En Savoir Plus →</a>
                                     </div>
                                 </div>
                             </div>
@@ -428,7 +434,8 @@
                                             Découvrez du saké maturé et une cuisine japonaise authentique dans un cadre
                                             traditionnel de Kyoto.
                                         </p>
-                                        <a href="#shop-detail-3" class="shop-link">En Savoir Plus →</a>
+                                        <a href="../shops/_detail-template.html-3" class="shop-link">En Savoir Plus
+                                            →</a>
                                     </div>
                                 </div>
                             </div>
@@ -455,7 +462,8 @@
                                             Atmosphère décontractée offrant une sélection diversifiée de sakés maturés
                                             à déguster.
                                         </p>
-                                        <a href="#shop-detail-4" class="shop-link">En Savoir Plus →</a>
+                                        <a href="../shops/_detail-template.html-4" class="shop-link">En Savoir Plus
+                                            →</a>
                                     </div>
                                 </div>
                             </div>
@@ -482,7 +490,8 @@
                                             Sélection soignée mettant en vedette des brasseries locales et du saké
                                             maturé choisi avec soin.
                                         </p>
-                                        <a href="#shop-detail-5" class="shop-link">En Savoir Plus →</a>
+                                        <a href="../shops/_detail-template.html-5" class="shop-link">En Savoir Plus
+                                            →</a>
                                     </div>
                                 </div>
                             </div>
@@ -498,7 +507,7 @@
                 </div>
 
                 <div class="section-cta">
-                    <a href="#shops-list" class="btn btn-outline">Voir Tous les Emplacements</a>
+                    <a href="../shops/index.html" class="btn btn-outline">Voir Tous les Emplacements</a>
                 </div>
             </div>
         </section>
@@ -524,7 +533,7 @@
                                 Le saké maturé révèle différentes caractéristiques selon la température. Qu'il soit
                                 frais, à température ambiante ou chaud, chaque température apporte des saveurs uniques.
                             </p>
-                            <a href="#blog-detail-1" class="blog-link">Lire la Suite</a>
+                            <a href="../blog/article01.html" class="blog-link">Lire la Suite</a>
                         </div>
                     </article>
 
@@ -542,7 +551,7 @@
                                 Découvrez des combinaisons harmonieuses avec les plats japonais, occidentaux et
                                 ethniques.
                             </p>
-                            <a href="#blog-detail-2" class="blog-link">Lire la Suite</a>
+                            <a href="../blog/index.html" class="blog-link">Lire la Suite</a>
                         </div>
                     </article>
 
@@ -559,13 +568,13 @@
                                 condition optimale.
                                 Avec des soins appropriés, vous pouvez même continuer le processus de vieillissement.
                             </p>
-                            <a href="#blog-detail-3" class="blog-link">Lire la Suite</a>
+                            <a href="../blog/index.html" class="blog-link">Lire la Suite</a>
                         </div>
                     </article>
                 </div>
 
                 <div class="section-cta">
-                    <a href="#blog-archive" class="btn btn-outline">Voir Tous les Articles</a>
+                    <a href="../blog/index.html" class="btn btn-outline">Voir Tous les Articles</a>
                 </div>
             </div>
         </section>
@@ -665,7 +674,7 @@
                         <div class="form-group">
                             <label class="checkbox-label">
                                 <input type="checkbox" name="privacy" required>
-                                <span>J'accepte la <a href="privacy.html" target="_blank">Politique de
+                                <span>J'accepte la <a href="../privacy.html" target="_blank">Politique de
                                         Confidentialité</a></span>
                             </label>
                         </div>
