--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
-    <link rel="stylesheet" href="assets/css/style.css?v=20251024">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -325,7 +325,7 @@
                             時代を超えて受け継がれる、究極の熟成古酒を目指します。
                             このプロジェクトは、日本酒文化の継承と、未来への架け橋となる取り組みです。
                         </p>
-                        <a href="#project-detail" class="btn btn-primary">詳しく見る</a>
+                        <a href="./project/index.html" class="btn btn-primary">詳しく見る</a>
                     </div>
                     <div class="project-image">
                         <img src="https://images.unsplash.com/photo-1559056199-641a0ac8b55e?w=800&q=80"
