--- a/privacy.html
+++ b/privacy.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ページタイトル | 長期熟成酒研究会</title>
-    <meta name="description" content="このページの説明をここに記載してください。">
-    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>プライバシーポリシー | 長期熟成酒研究会</title>
+    <meta name="description" content="長期熟成酒研究会のプライバシーポリシーです。個人情報の取扱い、安全管理、第三者提供、廃棄、問い合わせ窓口等について定めています。">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/detail.css">
     <style>
         /* このページの本文内の ol を丸数字(①②③...)で表示する */
         /* 1〜20 までを定義。21 以上は通常の decimal にフォールバックします */
@@ -57,8 +58,8 @@
         <nav class="breadcrumb" aria-label="breadcrumb">
             <div class="container">
                 <ol>
-                    <li><a id="breadcrumb-home" href="../index.html">Home</a></li>
-                    <li aria-current="page">ページタイトル</li>
+                    <li><a id="breadcrumb-home" href="index.html">Home</a></li>
+                    <li aria-current="page">プライバシーポリシー</li>
                 </ol>
             </div>
         </nav>
@@ -116,7 +117,7 @@
                 <!-- カード型ページャー（共通コンポーネント） -->
                 <nav class="article-pager article-pager--cards pager-cards" aria-label="pager">
                     <!-- 前へ（例：一覧に戻る） -->
-                    <a class="pager-card pager-card--prev" href="../index.html" aria-label="Homeに戻る">
+                    <a class="pager-card pager-card--prev" href="index.html" aria-label="Homeに戻る">
                         <div>
                             <div class="pager-card__label">Back to Home</div>
                             <div class="pager-card__title">ホームに戻る</div>
@@ -135,8 +136,8 @@
     <div id="footer-placeholder"></div>
 
     <!-- Scripts -->
-    <script src="../assets/js/includes.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <script src="assets/js/includes.js" defer></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
